@@ -1,3 +1,5 @@
+'static'; var TEXT_SCORE      = '';
+'static'; var TEXT_SUBSCORE   = '';
 'static'; var TEXT_WHO_STARTS = '';
 'static'; var TEXT_THROW_DICE = '';
 'static'; var TEXT_TOSS_COIN  = '';
@@ -27,53 +29,64 @@
 'static'; var TEXT_DICE_SIDES = ['⚀', '⚁', '⚂', '⚃', '⚄', '⚅'];
 
 'static'; function SetLanguageCzech() {
-    TEXT_WHO_STARTS = 'Náhoda';
-    TEXT_THROW_DICE = 'Kostky';
-    TEXT_TOSS_COIN  = 'Mince';
-    TEXT_WHOLL_START= 'Kdo začne?';
-    TEXT_APPLY      = 'Použít';
-    TEXT_BACK       = 'Zpět';
-    TEXT_COIN_SIDES = ['Hlava', 'Orel'];
-    TEXT_SETTINGS   = 'Nastavení';
-    TEXT_A_SETTINGS = 'Pokročilé';
-    TEXT_LANG       = 'Jazyk';
-    TEXT_TIMER      = 'Nezdržuj';
-    TEXT_INIT_SCORE = 'Počáteční skóre';
-    TEXT_INIT_SUBSCR= 'Počáteční subskóre';
-    TEXT_USE_SUBSCR = 'Povolit subskóre';
-    TEXT_USE_THROW_HISTORY = 'Povolit historii hodů';
-    TEXT_USE_SCORE_HISTORY = 'Povolit historii skóre';
-    TEXT_USE_TIME_TRACK = 'Povolit sledování času';
-    TEXT_DICE_COUNT = 'Počet kostek';
-    TEXT_PL_COUNT   = 'Počet hráčů';
-    TEXT_PL_COLORS  = 'Barvy hráčů';
+	TEXT_SCORE      = 'skóre';
+	TEXT_SUBSCORE   = 'subskóre'
+	TEXT_WHO_STARTS = 'Náhoda';
+	TEXT_THROW_DICE = 'Kostky';
+	TEXT_TOSS_COIN  = 'Mince';
+	TEXT_WHOLL_START= 'Kdo začne?';
+	TEXT_APPLY      = 'Použít';
+	TEXT_BACK       = 'Zpět';
+	TEXT_COIN_SIDES = ['Hlava', 'Orel'];
+	TEXT_SETTINGS   = 'Nastavení';
+	TEXT_A_SETTINGS = 'Pokročilé';
+	TEXT_LANG       = 'Jazyk';
+	TEXT_TIMER      = 'Nezdržuj';
+	TEXT_INIT_SCORE = 'Počáteční ' + TEXT_SCORE;
+	TEXT_INIT_SUBSCR= 'Počáteční ' + TEXT_SUBSCORE;
+	TEXT_USE_SUBSCR = 'Povolit ' + TEXT_SUBSCORE;
+	TEXT_USE_THROW_HISTORY = 'Povolit historii hodů';
+	TEXT_USE_SCORE_HISTORY = 'Povolit historii ' + TEXT_SCORE;
+	TEXT_USE_TIME_TRACK = 'Povolit sledování času';
+	TEXT_DICE_COUNT = 'Počet kostek';
+	TEXT_PL_COUNT   = 'Počet hráčů';
+	TEXT_PL_COLORS  = 'Barvy hráčů';
 }
 
 'static'; function SetLanguageEnglish() {
-    TEXT_WHO_STARTS = 'Chance';
-    TEXT_THROW_DICE = 'Dice';
-    TEXT_TOSS_COIN  = 'Coin';
-    TEXT_WHOLL_START= 'Who\'ll start?';
-    TEXT_APPLY      = 'Apply';
-    TEXT_BACK       = 'Back';
-    TEXT_COIN_SIDES = ['Head', 'Tail'];
-    TEXT_SETTINGS   = 'Settings';
-    TEXT_A_SETTINGS = 'Advanced';
-    TEXT_LANG       = 'Language';
-    TEXT_TIMER      = 'Timer';
-    TEXT_INIT_SCORE = 'Initial score';
-    TEXT_INIT_SUBSCR= 'Initial subscore';
-    TEXT_USE_SUBSCR = 'Enable subscore';
-    TEXT_USE_THROW_HISTORY = 'Enable throw history';
-    TEXT_USE_SCORE_HISTORY = 'Enable score history';
-    TEXT_USE_TIME_TRACK = 'Enable time tracking';
-    TEXT_DICE_COUNT = 'Dice count';
-    TEXT_PL_COUNT   = 'Player count';
-    TEXT_PL_COLORS  = 'Player colors';
+	TEXT_SCORE      = 'score';
+	TEXT_SUBSCORE   = 'subscore'
+	TEXT_WHO_STARTS = 'Chance';
+	TEXT_THROW_DICE = 'Dice';
+	TEXT_TOSS_COIN  = 'Coin';
+	TEXT_WHOLL_START= 'Who\'ll start?';
+	TEXT_APPLY      = 'Apply';
+	TEXT_BACK       = 'Back';
+	TEXT_COIN_SIDES = ['Head', 'Tail'];
+	TEXT_SETTINGS   = 'Settings';
+	TEXT_A_SETTINGS = 'Advanced';
+	TEXT_LANG       = 'Language';
+	TEXT_TIMER      = 'Timer';
+	TEXT_INIT_SCORE = 'Initial ' + TEXT_SCORE;
+	TEXT_INIT_SUBSCR= 'Initial ' + TEXT_SUBSCORE;
+	TEXT_USE_SUBSCR = 'Enable ' + TEXT_SUBSCORE;
+	TEXT_USE_THROW_HISTORY = 'Enable throw history';
+	TEXT_USE_SCORE_HISTORY = 'Enable ' + TEXT_SCORE + ' history';
+	TEXT_USE_TIME_TRACK = 'Enable time tracking';
+	TEXT_DICE_COUNT = 'Dice count';
+	TEXT_PL_COUNT   = 'Player count';
+	TEXT_PL_COLORS  = 'Player colors';
 }
 
 'static'; function SetLanguageById(id) {
-    if (id == 0) SetLanguageCzech();
-    else SetLanguageEnglish();
-    ClearFontSizeCache();
+	if (id == 0) SetLanguageCzech();
+	else SetLanguageEnglish();
+	ClearFontSizeCache();
+}
+
+'static'; function GetPhraseScoreHistory(whichText, langId) {
+	if (langId == 0) {
+		return '&nbsp;historie ' + whichText + ':';
+	}
+	return '&nbsp;' + whichText + ' history:';
 }
